--- a/05_ltzt-vrbrtng.Rmd
+++ b/05_ltzt-vrbrtng.Rmd
@@ -335,7 +335,7 @@ _Working with Tibbbles_ zeigt die Verwendung von Tibbles sowie die Verwaltung vo
 learnr::run_tutorial("tibbles", package = "idsst.rtutorials")
 ```
 
-_Isolating Data with dplyr_ zeigt wie ihr Variablen auswählt, Beobachtungen filtert und Werte neu anordnet. Zudem wird der Pipe-Operator von R, `%>%`, eingeführt.
+_Isolating Data with dplyr_ zeigt wie ihr Variablen auswählt, Beobachtungen filtert und Werte neu anordnet. Zudem wird der Pipe-Operator von R, ` |> `, eingeführt.
 
 ```{r, eval=FALSE}
 learnr::run_tutorial("isolating", package = "idsst.rtutorials")
